--- a/DMU_project.ipynb
+++ b/DMU_project.ipynb
@@ -13,20 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_billboard = pd.read_csv(\n",
-    "    'data/Billboard-Weekly-Songs-With-Song-And-Artist-Spotify-Popularity.csv').drop(\n",
-    "    columns = 'Unnamed: 0')\n",
-    "df_dataset = pd.read_csv('data/dataset.csv')\n",
+    "    'data/Billboard-Weekly-Songs-With-Song-And-Artist-Spotify-Popularity.csv')\n",
+    "df_dataset = pd.read_csv('data/dataset.csv').drop(columns = 'Unnamed: 0')\n",
     "df_artist_genres = pd.read_csv('data/artists_genres.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -138,7 +137,7 @@
        "4             NaN  1955                  -1                 24  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,52 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "300600"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(df_billboard)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Unnamed: 0', 'Title', 'Artist', 'Weeks on chart', 'year',\n",
-       "       'Spotify_Popularity', 'Artist_Popularity', 'track_id', 'track_title',\n",
-       "       'track_artist', 'danceability', 'energy', 'key', 'loudness',\n",
-       "       'speechiness', 'acousticness', 'instrumentalness', 'liveness',\n",
-       "       'valence', 'duration_ms', 'time_signature', 'tempo', 'mode'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_dataset.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +172,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0.1</th>\n",
        "      <th>Title</th>\n",
        "      <th>Artist</th>\n",
        "      <th>Weeks on chart</th>\n",
@@ -228,6 +181,7 @@
        "      <th>track_id</th>\n",
        "      <th>track_title</th>\n",
        "      <th>track_artist</th>\n",
+       "      <th>danceability</th>\n",
        "      <th>...</th>\n",
        "      <th>loudness</th>\n",
        "      <th>speechiness</th>\n",
@@ -244,7 +198,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>Poor Little Fool</td>\n",
        "      <td>Ricky Nelson</td>\n",
        "      <td>1.0</td>\n",
@@ -254,6 +207,7 @@
        "      <td>5ayybTSXNwcarDtxQKqvWX</td>\n",
        "      <td>Poor Little Fool - Remastered</td>\n",
        "      <td>Ricky Nelson</td>\n",
+       "      <td>0.543</td>\n",
        "      <td>...</td>\n",
        "      <td>-11.573</td>\n",
        "      <td>0.0317</td>\n",
@@ -268,7 +222,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>Patricia</td>\n",
        "      <td>Perez Prado And His Orchestra</td>\n",
        "      <td>NaN</td>\n",
@@ -278,6 +231,7 @@
        "      <td>205EtD8tQnHDXMkmtYiaHF</td>\n",
        "      <td>Patricia</td>\n",
        "      <td>Pérez Prado</td>\n",
+       "      <td>0.704</td>\n",
        "      <td>...</td>\n",
        "      <td>-9.522</td>\n",
        "      <td>0.0457</td>\n",
@@ -292,7 +246,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>Splish Splash</td>\n",
        "      <td>Bobby Darin</td>\n",
        "      <td>NaN</td>\n",
@@ -302,6 +255,7 @@
        "      <td>40fD7ct05FvQHLdQTgJelG</td>\n",
        "      <td>Splish Splash</td>\n",
        "      <td>Bobby Darin</td>\n",
+       "      <td>0.645</td>\n",
        "      <td>...</td>\n",
        "      <td>-1.526</td>\n",
        "      <td>0.0393</td>\n",
@@ -316,7 +270,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>Hard Headed Woman</td>\n",
        "      <td>Elvis Presley With The Jordanaires</td>\n",
        "      <td>NaN</td>\n",
@@ -326,6 +279,7 @@
        "      <td>32CVurlBxtEYQlDm3yzCLl</td>\n",
        "      <td>Hard Headed Woman</td>\n",
        "      <td>Elvis Presley</td>\n",
+       "      <td>0.610</td>\n",
        "      <td>...</td>\n",
        "      <td>-8.739</td>\n",
        "      <td>0.1760</td>\n",
@@ -340,7 +294,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>When</td>\n",
        "      <td>Kalin Twins</td>\n",
        "      <td>NaN</td>\n",
@@ -350,6 +303,7 @@
        "      <td>1BQOMZeYwzesvXANmRgrEp</td>\n",
        "      <td>When - Live</td>\n",
        "      <td>Kalin Twins</td>\n",
+       "      <td>0.646</td>\n",
        "      <td>...</td>\n",
        "      <td>-12.679</td>\n",
        "      <td>0.0297</td>\n",
@@ -364,37 +318,37 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
+       "<p>5 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0.1              Title                              Artist  \\\n",
-       "0             0   Poor Little Fool                        Ricky Nelson   \n",
-       "1             1           Patricia       Perez Prado And His Orchestra   \n",
-       "2             2      Splish Splash                         Bobby Darin   \n",
-       "3             3  Hard Headed Woman  Elvis Presley With The Jordanaires   \n",
-       "4             4               When                         Kalin Twins   \n",
+       "               Title                              Artist  Weeks on chart  \\\n",
+       "0   Poor Little Fool                        Ricky Nelson             1.0   \n",
+       "1           Patricia       Perez Prado And His Orchestra             NaN   \n",
+       "2      Splish Splash                         Bobby Darin             NaN   \n",
+       "3  Hard Headed Woman  Elvis Presley With The Jordanaires             NaN   \n",
+       "4               When                         Kalin Twins             NaN   \n",
        "\n",
-       "   Weeks on chart  year  Spotify_Popularity  Artist_Popularity  \\\n",
-       "0             1.0  1955                  -1                 56   \n",
-       "1             NaN  1955                  -1                 12   \n",
-       "2             NaN  1955                  -1                 62   \n",
-       "3             NaN  1955                  -1                 -1   \n",
-       "4             NaN  1955                  -1                 24   \n",
+       "   year  Spotify_Popularity  Artist_Popularity                track_id  \\\n",
+       "0  1955                  -1                 56  5ayybTSXNwcarDtxQKqvWX   \n",
+       "1  1955                  -1                 12  205EtD8tQnHDXMkmtYiaHF   \n",
+       "2  1955                  -1                 62  40fD7ct05FvQHLdQTgJelG   \n",
+       "3  1955                  -1                 -1  32CVurlBxtEYQlDm3yzCLl   \n",
+       "4  1955                  -1                 24  1BQOMZeYwzesvXANmRgrEp   \n",
        "\n",
-       "                 track_id                    track_title   track_artist  ...   \\\n",
-       "0  5ayybTSXNwcarDtxQKqvWX  Poor Little Fool - Remastered   Ricky Nelson  ...    \n",
-       "1  205EtD8tQnHDXMkmtYiaHF                       Patricia    Pérez Prado  ...    \n",
-       "2  40fD7ct05FvQHLdQTgJelG                  Splish Splash    Bobby Darin  ...    \n",
-       "3  32CVurlBxtEYQlDm3yzCLl              Hard Headed Woman  Elvis Presley  ...    \n",
-       "4  1BQOMZeYwzesvXANmRgrEp                    When - Live    Kalin Twins  ...    \n",
+       "                     track_title   track_artist  danceability  ...   loudness  \\\n",
+       "0  Poor Little Fool - Remastered   Ricky Nelson         0.543  ...    -11.573   \n",
+       "1                       Patricia    Pérez Prado         0.704  ...     -9.522   \n",
+       "2                  Splish Splash    Bobby Darin         0.645  ...     -1.526   \n",
+       "3              Hard Headed Woman  Elvis Presley         0.610  ...     -8.739   \n",
+       "4                    When - Live    Kalin Twins         0.646  ...    -12.679   \n",
        "\n",
-       "   loudness  speechiness  acousticness  instrumentalness  liveness  valence  \\\n",
-       "0   -11.573       0.0317        0.6690          0.000000     0.134    0.795   \n",
-       "1    -9.522       0.0457        0.0862          0.251000     0.115    0.837   \n",
-       "2    -1.526       0.0393        0.3850          0.000000     0.370    0.965   \n",
-       "3    -8.739       0.1760        0.8420          0.000002     0.501    0.859   \n",
-       "4   -12.679       0.0297        0.1680          0.000005     0.976    0.963   \n",
+       "   speechiness  acousticness  instrumentalness  liveness  valence  \\\n",
+       "0       0.0317        0.6690          0.000000     0.134    0.795   \n",
+       "1       0.0457        0.0862          0.251000     0.115    0.837   \n",
+       "2       0.0393        0.3850          0.000000     0.370    0.965   \n",
+       "3       0.1760        0.8420          0.000002     0.501    0.859   \n",
+       "4       0.0297        0.1680          0.000005     0.976    0.963   \n",
        "\n",
        "   duration_ms  time_signature    tempo  mode  \n",
        "0     153933.0             4.0  154.999   1.0  \n",
@@ -403,16 +357,61 @@
        "3     113480.0             4.0   97.924   1.0  \n",
        "4     144573.0             4.0   96.490   1.0  \n",
        "\n",
-       "[5 rows x 23 columns]"
+       "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "300600"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_billboard)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Title', 'Artist', 'Weeks on chart', 'year', 'Spotify_Popularity',\n",
+       "       'Artist_Popularity', 'track_id', 'track_title', 'track_artist',\n",
+       "       'danceability', 'energy', 'key', 'loudness', 'speechiness',\n",
+       "       'acousticness', 'instrumentalness', 'liveness', 'valence',\n",
+       "       'duration_ms', 'time_signature', 'tempo', 'mode'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_dataset.columns"
    ]
   },
   {
