--- a/Basic_statistics.ipynb
+++ b/Basic_statistics.ipynb
@@ -842,16 +842,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.set(rc={'figure.figsize':(10,7)})\n",
-    "sns.set_style(\"ticks\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
    "outputs": [
@@ -1036,6 +1026,37 @@
     "plt.xticks(np.arange(1959, 1996), np.arange(1959, 1996), rotation = '90')\n",
     "plt;"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lower_bound, mean, upper_bound = [], [], []\n",
+    "\n",
+    "# Compute the 95% confidence interval\n",
+    "for week in range(len(features['duration_ms'])):\n",
+    "    m, lb, ub = mean_confidence_interval(features['duration_ms'][week])\n",
+    "    \n",
+    "    lower_bound.append(lb)\n",
+    "    mean.append(m)\n",
+    "    upper_bound.append(ub)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
